--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2812,8 +2812,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #233140;
+  border-color: #233140;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2821,8 +2821,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #3071a9;
-  border-color: #285e8e;
+  background-color: #18BC9C;
+  border-color: #18BC9C;
 }
 .btn-primary:active,
 .btn-primary.active,
