--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -296,6 +296,8 @@ p.copyright {
         cursor:pointer;
         white-space:nowrap
         font-size: 2px;
+
+        background-color: #233140;
     }
 }
 
@@ -313,6 +315,8 @@ p.copyright {
         cursor:pointer;
         white-space:nowrap
         font-size: 8px;
+
+        background-color: #233140;
     }
 }
 
@@ -331,6 +335,8 @@ p.copyright {
         cursor:pointer;
         white-space:nowrap
         font-size: 10px;
+
+        background-color: #233140;
     }
 }
 
@@ -350,6 +356,8 @@ p.copyright {
         cursor:pointer;
         white-space:nowrap
         font-size: 24px;
+
+        background-color: #233140;
     }
 }
 
@@ -369,6 +377,8 @@ p.copyright {
         cursor:pointer;
         white-space:nowrap
         font-size: 32px;
+
+        background-color: #233140;
     }
 }
 
@@ -388,6 +398,8 @@ p.copyright {
         cursor:pointer;
         white-space:nowrap
         font-size: 32px;
+
+        background-color: #233140;
         
     }
 }
